# requestflow-take-home

./: .env.example  .gitignore  AI_USE_TEMPLATE.md  ASSIGNMENT.md  Makefile  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  seed.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 20260712_0001_initial.py
backend/tests/: conftest.py  test_starter_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: request-board.test.tsx  request-board.tsx
frontend/src/lib/: api.ts  types.ts
