[project]
name = "requestflow-backend"
version = "0.1.0"
description = "Intentionally incomplete RequestFlow take-home backend"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.15",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic>=2.10",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
